--- a/index.html
+++ b/index.html
@@ -6,77 +6,87 @@
   <title>Spanish Stories</title>
   <style>
     * { box-sizing: border-box; }
-    body { font-family: system-ui, sans-serif; margin: 0; padding: 1.5rem; background: #f5f5f5; color: #1a1a1a; }
-    h1 { margin: 0 0 1.5rem; font-size: 1.5rem; }
+    body { font-family: system-ui, sans-serif; margin: 0; padding: 1.5rem; padding-top: 3rem; background: #f5f5f5; color: #1a1a1a; }
+    body.dark { background: #1a1a1a; color: #e0e0e0; }
+    .page-header { display: flex; align-items: center; justify-content: space-between; margin-bottom: 1.5rem; }
+    .page-header h1 { margin: 0; font-size: 1.5rem; }
+    .dark-toggle { position: fixed; top: 1rem; right: 1rem; width: 2.5rem; height: 2.5rem; padding: 0; border: none; border-radius: 50%; background: #e0e0e0; color: #333; cursor: pointer; display: flex; align-items: center; justify-content: center; z-index: 10; }
+    .dark-toggle:hover { background: #ccc; }
+    body.dark .dark-toggle { background: #333; color: #e0e0e0; }
+    body.dark .dark-toggle:hover { background: #555; }
     .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 1.5rem; max-width: 1200px; margin: 0 auto; }
     .card { display: block; text-decoration: none; color: inherit; background: #fff; border-radius: 12px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.08); transition: transform 0.2s, box-shadow 0.2s; }
+    body.dark .card { background: #2d2d2d; }
     .card:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(0,0,0,0.12); }
-    .card-bg { position: relative; height: 140px; background-size: cover; background-position: center; background-color: #e0e0e0; }
-    .card-bg img { width: 100%; height: 100%; object-fit: cover; display: block; }
+    .card-bg { position: relative; height: 140px; background-size: cover; background-position: center; background-color: #fff; }
+    body.dark .card-bg { background-color: #1a1a1a; }
     .card-bg .level { position: absolute; top: 0.5rem; right: 0.5rem; background: rgba(0,0,0,0.7); color: #fff; padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.8rem; font-weight: 600; }
+    body.dark .card-bg .level { background: rgba(255,255,255,0.2); }
     .card-body { padding: 1rem; }
     .card-title { margin: 0; font-size: 1.05rem; line-height: 1.35; }
-    .card-meta { margin-top: 0.5rem; font-size: 0.85rem; color: #666; }
-    .loading { text-align: center; padding: 2rem; color: #666; }
+    .card-meta { margin-top: 0.25rem; font-size: 0.85rem; color: #666; }
+    body.dark .card-meta { color: #aaa; }
+    .card-category { font-size: 0.75rem; color: #888; margin-top: 0.25rem; }
+    body.dark .card-category { color: #888; }
     .error { color: #c00; padding: 1rem; }
   </style>
 </head>
 <body>
-  <h1>Spanish Stories</h1>
-  <div id="app" class="loading">Loading stories…</div>
-
+  <button type="button" class="dark-toggle" id="darkToggle" title="Toggle dark mode" aria-label="Toggle dark mode">
+    <svg id="iconSun" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="4"/><path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M6.34 17.66l-1.41 1.41M19.07 4.93l-1.41 1.41"/></svg>
+    <svg id="iconMoon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="display:none"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
+  </button>
+  <div class="page-header"><h1>Spanish Stories</h1></div>
+  <div id="app"></div>
+  <script>var EMBEDDED_MANIFEST = [{"id": "apres_ski_pastel", "title": "El après-ski y el pastelito", "titleTranslation": "The après-ski and the little pastry", "level": "A2", "thumbnail": "apres_ski_pastel_thumbnail_snow_mountains.png", "category": "Grammar"}, {"id": "azotea_caja_preguntas", "title": "La caja de las preguntas", "titleTranslation": "The box of questions", "level": "C1", "thumbnail": "azotea_caja_preguntas_thumbnail_rooftop.png", "category": "Grammar"}, {"id": "bali_scooter", "title": "El surfista y la scooter en Bali", "titleTranslation": "The surfer and the scooter in Bali", "level": "B1", "thumbnail": "bali_scooter_thumbnail_surfer_beach.png", "category": "Grammar"}];</script>
   <script>
     (function () {
       var app = document.getElementById('app');
-
+      var darkToggle = document.getElementById('darkToggle');
+      var iconSun = document.getElementById('iconSun');
+      var iconMoon = document.getElementById('iconMoon');
+      try {
+        if (localStorage.getItem('darkMode') === '1') {
+          document.body.classList.add('dark');
+          iconSun.style.display = 'none';
+          iconMoon.style.display = 'block';
+        } else { iconMoon.style.display = 'none'; }
+      } catch (e) {}
+      darkToggle.addEventListener('click', function () {
+        document.body.classList.toggle('dark');
+        var isDark = document.body.classList.contains('dark');
+        iconSun.style.display = isDark ? 'none' : 'block';
+        iconMoon.style.display = isDark ? 'block' : 'none';
+        try { localStorage.setItem('darkMode', isDark ? '1' : '0'); } catch (e) {}
+      });
       function escapeHtml(s) {
         if (s == null) return '';
         var div = document.createElement('div');
         div.textContent = s;
         return div.innerHTML;
       }
-
-      function getQuery() {
-        var q = {};
-        (window.location.search || '').replace(/^\?/, '').split('&').forEach(function (p) {
-          var kv = p.split('=');
-          if (kv.length === 2) q[decodeURIComponent(kv[0])] = decodeURIComponent(kv[1]);
-        });
-        return q;
+      var list = EMBEDDED_MANIFEST;
+      if (!list || !list.length) {
+        app.innerHTML = '<p class="error">No stories found.</p>';
+        return;
       }
-
-      fetch('stories/manifest.json')
-        .then(function (r) { return r.ok ? r.json() : Promise.reject(new Error('No manifest')); })
-        .then(function (names) {
-          if (!names || !names.length) { app.innerHTML = '<p class="error">No stories found.</p>'; app.className = ''; return; }
-          return Promise.all(names.map(function (name) {
-            return fetch('stories/' + name + '.json').then(function (r) {
-              if (!r.ok) return null;
-              return r.json().then(function (data) { return { name: name, data: data }; });
-            }).catch(function () { return null; });
-          })).then(function (results) {
-            var list = results.filter(Boolean);
-            if (!list.length) { app.innerHTML = '<p class="error">Could not load any story.</p>'; app.className = ''; return; }
-            var html = '<div class="grid">';
-            list.forEach(function (item) {
-              var d = item.data;
-              var thumb = d.thumbnail && d.thumbnail.filename ? ('images/' + d.thumbnail.filename) : '';
-              var bgStyle = thumb ? (' style="background-image: url(\'' + thumb + '\')"') : '';
-              html += '<a class="card" href="story.html?name=' + encodeURIComponent(item.name) + '">';
-              html += '<div class="card-bg"' + bgStyle + '><span class="level">' + escapeHtml(d.level || '') + '</span></div>';
-              html += '<div class="card-body"><h2 class="card-title">' + escapeHtml(d.title || item.name) + '</h2>';
-              if (d.titleTranslation) html += '<p class="card-meta">' + escapeHtml(d.titleTranslation) + '</p>';
-              html += '</div></a>';
-            });
-            html += '</div>';
-            app.innerHTML = html;
-            app.className = '';
-          });
-        })
-        .catch(function (e) {
-          app.innerHTML = '<p class="error">Could not load manifest or story files. Open this page over HTTP (e.g. run a local server from this folder).</p>';
-          app.className = '';
-        });
+      var html = '<div class="grid">';
+      list.forEach(function (item) {
+        var id = item.id || '';
+        var title = item.title || id;
+        var titleTranslation = item.titleTranslation || '';
+        var level = item.level || '';
+        var thumb = (item.thumbnail && item.thumbnail.trim()) ? ('images/' + item.thumbnail.trim()) : '';
+        var category = item.category || '';
+        var bgStyle = thumb ? (' style="background-image: url(\'' + thumb + '\')"') : '';
+        html += '<a class="card" href="story.html?name=' + encodeURIComponent(id) + '">';
+        html += '<div class="card-bg"' + bgStyle + '><span class="level">' + escapeHtml(level) + '</span></div>';
+        html += '<div class="card-body"><h2 class="card-title">' + escapeHtml(title) + '</h2>';
+        if (titleTranslation) html += '<p class="card-meta">' + escapeHtml(titleTranslation) + '</p>';
+        if (category) html += '<p class="card-category">' + escapeHtml(category) + '</p>';
+        html += '</div></a>';
+      });
+      app.innerHTML = html + '</div>';
     })();
   </script>
 </body>
